--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "iron-icons": "PolymerElements/iron-icons#^1.2.0",
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "paper-card": "PolymerElements/paper-card#^1.1.4",
-    "paper-card": "PolymerElements/iron-ajax#1.4.3",
-    "paper-card": "PolymerElements/iron-image#1.2.5"
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
