--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "indais-proto",
+  "name": "id-proto",
   "authors": [
     "Karolis Krulis"
   ],
@@ -22,7 +22,9 @@
     "paper-button": "PolymerElements/paper-button#^1.0.14",
     "paper-card": "PolymerElements/paper-card#^1.1.4",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
-    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2"
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2",
+    "neon-animation": "PolymerElements/neon-animation#^1.2.4",
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
