--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,8 @@
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0",
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2",
     "neon-animation": "PolymerElements/neon-animation#^1.2.4",
-    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0"
+    "paper-tabs": "PolymerElements/paper-tabs#^1.7.0",
+    "paper-listbox": "polymerelements/paper-listbox#^1.1.2"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
