--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "paper-listbox": "polymerelements/paper-listbox#^1.1.2",
     "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0",
     "iron-list": "PolymerElements/iron-list#^1.4.0",
-    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3"
+    "paper-tooltip": "PolymerElements/paper-tooltip#^1.1.3",
+    "iron-scroll-threshold": "PolymerElements/iron-scroll-threshold#^1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
